--- a/src/screens/main/main.css
+++ b/src/screens/main/main.css
@@ -96,7 +96,11 @@
   padding: 10px 0px 10px 10px;
   z-index: 2;
 }
+.main-sub{
+  grid-column-start: 4;
+  grid-column-end:5;
 
+}
 
 @media only screen and (min-width: 374px) {
   .green-box {
